# rustdex

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
src/: lib.rs  main.rs
